Correct debug assertion (and possible runtime errors) by checking validity of bitmap settings used to create the Windows Cairo contexts. https://bugs.webkit.org/show_bug.cgi?id=33164.

Reviewed by Adam Roben.

* platform/graphics/win/GraphicsContextCairoWin.cpp:
(WebCore::createCairoContextWithHDC): Check validity of selected
  OBJ_BITMAP retrieved, and only create 32-bit context when
  a valid bitmap is provided.



Canonical link: https://commits.webkit.org/44165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52752 268f45cc-cd09-0410-ab3c-d52691b4dbfc